@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,6 +9,7 @@
  *     IBM Corporation - initial API and implementation
  *     Benjamin Muskalla <b.muskalla@gmx.net>
  *     - Fix for bug 172574 - [IDE] DeleteProjectDialog inconsequent selection behavior
+ *     Andrey Loskutov <loskutov@gmx.de> - Bug 41431
  *******************************************************************************/
 package org.eclipse.ui.actions;
 
@@ -62,7 +63,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	static class DeleteProjectDialog extends MessageDialog {
 
-		private IResource[] projects;
+		private List<IResource> projects;
 
 		private boolean deleteContent = false;
 
@@ -76,7 +77,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 		private Button radio2;
 
-		DeleteProjectDialog(Shell parentShell, IResource[] projects) {
+		DeleteProjectDialog(Shell parentShell, List<IResource> projects) {
 			super(parentShell, getTitle(projects), null, // accept the
 					// default window
 					// icon
@@ -88,16 +89,16 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			setShellStyle(getShellStyle() | SWT.SHEET);
 		}
 
-		static String getTitle(IResource[] projects) {
-			if (projects.length == 1) {
+		static String getTitle(List<IResource> projects) {
+			if (projects.size() == 1) {
 				return IDEWorkbenchMessages.DeleteResourceAction_titleProject1;
 			}
 			return IDEWorkbenchMessages.DeleteResourceAction_titleProjectN;
 		}
 
-		static String getMessage(IResource[] projects) {
-			if (projects.length == 1) {
-				IProject project = (IProject) projects[0];
+		static String getMessage(List<IResource> projects) {
+			if (projects.size() == 1) {
+				IProject project = (IProject) projects.get(0);
 				return NLS
 						.bind(
 								IDEWorkbenchMessages.DeleteResourceAction_confirmProject1,
@@ -105,7 +106,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			}
 			return NLS.bind(
 					IDEWorkbenchMessages.DeleteResourceAction_confirmProjectN,
-					new Integer(projects.length));
+					Integer.valueOf((projects.size())));
 		}
 
 		@Override
@@ -122,8 +123,8 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			radio1 = new Button(composite, SWT.RADIO);
 			radio1.addSelectionListener(selectionListener);
 			String text1;
-			if (projects.length == 1) {
-				IProject project = (IProject) projects[0];
+			if (projects.size() == 1) {
+				IProject project = (IProject) projects.get(0);
 				if (project == null || project.getLocation() == null) {
 					text1 = IDEWorkbenchMessages.DeleteResourceAction_deleteContentsN;
 				} else {
@@ -290,19 +291,19 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 *         <code>false</code> if the selection contains non-resources or
 	 *         phantom resources
 	 */
-	private boolean canDelete(IResource[] resources) {
+	private boolean canDelete(List<IResource> resources) {
 		// allow only projects or only non-projects to be selected;
 		// note that the selection may contain multiple types of resource
 		if (!(containsOnlyProjects(resources) || containsOnlyNonProjects(resources))) {
 			return false;
 		}
 
-		if (resources.length == 0) {
+		if (resources.isEmpty()) {
 			return false;
 		}
 		// Return true if everything in the selection exists.
-		for (int i = 0; i < resources.length; i++) {
-			IResource resource = resources[i];
+		for (int i = 0; i < resources.size(); i++) {
+			IResource resource = resources.get(i);
 			if (resource.isPhantom()) {
 				return false;
 			}
@@ -318,9 +319,9 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * @return <code>true</code> if the resources contain linked resources,
 	 *         and <code>false</code> otherwise
 	 */
-	private boolean containsLinkedResource(IResource[] resources) {
-		for (int i = 0; i < resources.length; i++) {
-			IResource resource = resources[i];
+	private boolean containsLinkedResource(List<IResource> resources) {
+		for (int i = 0; i < resources.size(); i++) {
+			IResource resource = resources.get(i);
 			if (resource.isLinked()) {
 				return true;
 			}
@@ -336,7 +337,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * @return <code>true</code> if the resources contains only non-projects,
 	 *         and <code>false</code> otherwise
 	 */
-	private boolean containsOnlyNonProjects(IResource[] resources) {
+	private boolean containsOnlyNonProjects(List<IResource> resources) {
 		int types = getSelectedResourceTypes(resources);
 		// check for empty selection
 		if (types == 0) {
@@ -354,7 +355,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * @return <code>true</code> if the resources contains only projects, and
 	 *         <code>false</code> otherwise
 	 */
-	private boolean containsOnlyProjects(IResource[] resources) {
+	private boolean containsOnlyProjects(List<IResource> resources) {
 		int types = getSelectedResourceTypes(resources);
 		// note that the selection may contain multiple types of resource
 		return types == IResource.PROJECT;
@@ -368,7 +369,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDelete(IResource[] resources) {
+	private boolean confirmDelete(List<IResource> resources) {
 		if (containsOnlyProjects(resources)) {
 			return confirmDeleteProjects(resources);
 		}
@@ -385,12 +386,12 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDeleteNonProjects(IResource[] resources) {
+	private boolean confirmDeleteNonProjects(List<IResource> resources) {
 		String title;
 		String msg;
-		if (resources.length == 1) {
+		if (resources.size() == 1) {
 			title = IDEWorkbenchMessages.DeleteResourceAction_title1;
-			IResource resource = resources[0];
+			IResource resource = resources.get(0);
 			if (resource.isLinked()) {
 				msg = NLS
 						.bind(
@@ -407,11 +408,11 @@ public class DeleteResourceAction extends SelectionListenerAction {
 				msg = NLS
 						.bind(
 								IDEWorkbenchMessages.DeleteResourceAction_confirmLinkedResourceN,
-								new Integer(resources.length));
+						Integer.valueOf(resources.size()));
 			} else {
 				msg = NLS.bind(
 						IDEWorkbenchMessages.DeleteResourceAction_confirmN,
-						new Integer(resources.length));
+ new Integer(resources.size()));
 			}
 		}
 		return MessageDialog.openQuestion(shellProvider.getShell(), title, msg);
@@ -426,27 +427,12 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDeleteProjects(IResource[] resources) {
+	private boolean confirmDeleteProjects(List<IResource> resources) {
 		DeleteProjectDialog dialog = new DeleteProjectDialog(shellProvider.getShell(), resources);
 		dialog.setTestingMode(fTestingMode);
 		int code = dialog.open();
 		deleteContent = dialog.getDeleteContent();
 		return code == 0; // YES
-	}
-
-
-
-
-	/**
-	 * Return an array of the currently selected resources.
-	 *
-	 * @return the selected resources
-	 */
-	private IResource[] getSelectedResourcesArray() {
-		List selection = getSelectedResources();
-		IResource[] resources = new IResource[selection.size()];
-		selection.toArray(resources);
-		return resources;
 	}
 
 	/**
@@ -455,20 +441,21 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * @param resources
 	 *            the selected resources
 	 */
-	private int getSelectedResourceTypes(IResource[] resources) {
+	private int getSelectedResourceTypes(List<IResource> resources) {
 		int types = 0;
-		for (int i = 0; i < resources.length; i++) {
-			types |= resources[i].getType();
+		for (int i = 0; i < resources.size(); i++) {
+			types |= resources.get(i).getType();
 		}
 		return types;
 	}
 
 	@Override
 	public void run() {
-		final IResource[] resources = getSelectedResourcesArray();
+		final List<IResource> resources = getSelectedResources();
 
 		if (!fTestingMode) {
 			if (LTKLauncher.openDeleteWizard(getStructuredSelection())) {
+				CloseResourceAction.closeMatchingEditors(resources, true);
 				return;
 			}
 		}
@@ -486,7 +473,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 			@Override
 			protected IStatus run(IProgressMonitor monitor) {
-				if (resources.length == 0)
+				if (resources.isEmpty())
 					return Status.CANCEL_STATUS;
 				scheduleDeleteJob(resources);
 				return Status.OK_STATUS;
@@ -511,7 +498,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 *
 	 * @param resourcesToDelete
 	 */
-	private void scheduleDeleteJob(final IResource[] resourcesToDelete) {
+	private void scheduleDeleteJob(final List<IResource> resourcesToDelete) {
 		// use a non-workspace job with a runnable inside so we can avoid
 		// periodic updates
 		Job deleteJob = new Job(
@@ -520,7 +507,8 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			public IStatus run(final IProgressMonitor monitor) {
 				try {
 					final DeleteResourcesOperation op =
-						new DeleteResourcesOperation(resourcesToDelete, IDEWorkbenchMessages.DeleteResourceAction_operationLabel, deleteContent);
+						new DeleteResourcesOperation(resourcesToDelete.toArray(new IResource[resourcesToDelete.size()]),
+								IDEWorkbenchMessages.DeleteResourceAction_operationLabel, deleteContent);
 					op.setModelProviderIds(getModelProviderIds());
 					// If we are deleting projects and their content, do not
 					// execute the operation in the undo history, since it cannot be
@@ -532,9 +520,8 @@ public class DeleteResourceAction extends SelectionListenerAction {
 						// we are calling this from a Job.
 						WorkbenchJob statusJob = new WorkbenchJob("Status checking"){ //$NON-NLS-1$
 							@Override
-							public IStatus runInUIThread(
-									IProgressMonitor monitor) {
-								return op.computeExecutionStatus(monitor);
+							public IStatus runInUIThread(IProgressMonitor m) {
+								return op.computeExecutionStatus(m);
 							}
 
 						};
@@ -585,7 +572,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	@Override
 	protected boolean updateSelection(IStructuredSelection selection) {
 		return super.updateSelection(selection)
-				&& canDelete(getSelectedResourcesArray());
+				&& canDelete(getSelectedResources());
 	}
 
 	/**
